...
        },
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Today',
          tabBarIcon: ({ color, focused }) => (
            <TabBarIcon name="footsteps" color={color} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
...
